Fixed padding in header and second section on mobile view too cramped

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -15,7 +15,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 40px 20px;
+    padding: 40px 10px;
 
     &__nav {
         display: flex;
